# shinbun

./: Makefile  README.md  gen-css.ts  index.html  justfile  package-lock.json  package.json  test.lua  vite.config.ts
src/: keybindings.ts  main.ts  style.css  syntax_highlighting.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
