[package]
name = "shinbun"
version = "0.0.0"
description = "Simple markdown reader"
authors = ["matkrin"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comrak = "0.20.0"
notify = "6.1.1"
clap = { version = "4.4.16", features = ["derive"] }
anyhow = "1.0.79"
atty = "0.2.14"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
